--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera página web</title>
+    <title>Mi primera página web 2</title>
 </head>
 <body>
     
     <h1>Luis Fernando Tena Ortega</h1>
     <h2>A01708712</h2>
-    <img src="https://imgur.com/a/T1oG647" alt="Yo en Ark Survival" width="200">
+    <img src="Captura de pantalla 2025-08-01 221632.png" alt="Yo en Ark Survival" width="200">
     <p>me gusta que me digan luis fer, me gusta jugar videojuegos, probar cosas nuevas, tocar instrumentos y programar</p>
     <a href="https://github.com/LuisFer753/iot-web" target="_blank">Mi github</a>
     <br>
-    <a href="mi correo: a01708712@tec.mx">es mi correo</a>
+    <a href="a01708712@tec.mx">es mi correo</a>
     <br>
     <iframe width="320" height="180" src="https://youtu.be/CWJjq3VO97E?si=NGg9xtDDIGVE10fi" title="temazo" frameborder="0" allowfullscreen></iframe>
     <br>
 
 </body>
 </html>
-
