--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>me gusta que me digan luis fer, me gusta jugar videojuegos, probar cosas nuevas, tocar instrumentos y programar</p>
     <a href="https://github.com/LuisFer753/iot-web" target="_blank">Mi github</a>
     <br>
-    <a href="a01708712@tec.mx">es mi correo</a>
+    <a href="mailto:a01708712@tec.mx">este es mi correo</a>
     <br>
     <iframe width="320" height="180" src="https://youtu.be/CWJjq3VO97E?si=NGg9xtDDIGVE10fi" title="temazo" frameborder="0" allowfullscreen></iframe>
     <br>
